<resources>
    <string name="app_name">Bomb It!</string>
    <string name="bPlay">Play</string>
    <string name="bSettings">Settings</string>
    <string name="bQuit">Quit game</string>
    <string name="bHighScore">HighScore</string>
    <string name="instruction">
        Here will be instruction about game and etc.
        Here will be instruction about game and etc.
        Here will be instruction about game and etc.
        Here will be instruction about game and etc.
        Here will be instruction about game and etc.
        Here will be instruction about game and etc.
    </string>

    <string name="settingsTitle">Settings</string>
    <string name="HighScoreTitle">Best players</string>
    <string name="skMusic">Music</string>
    <string name="skSound">Sound</string>

    <string name="Welcome">Welcome!</string>
    <string name="Register">Sign up!</string>
    <string name="Login">Login</string>

    <string name="registration">Registration</string>

    <string name="username">User name</string>
    <string name="password">********</string>

    <string name="email">Email@email.lt</string>
    <string name="pasw">Password</string>
    <string name="cpasw">Confirm password</string>


</resources>
