<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#99000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="64sp" />

        <Button
            android:id="@+id/play"
            style="@style/btnStyle"
            android:layout_below="@+id/title"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_button"
            android:text="@string/bPlay" />

        <Button
            android:id="@+id/settings"
            style="@style/btnStyle"
            android:layout_below="@+id/play"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_button"
            android:text="@string/bSettings" />

        <Button
            android:id="@+id/highScore"
            style="@style/btnStyle"
            android:layout_below="@+id/settings"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_button"
            android:text="@string/bHighScore" />


        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_margin="16dp"
            android:layout_toEndOf="@+id/play"
            >

            <TextView
                android:id="@+id/instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textSize="28dp" />

        </ScrollView>

        <Button
            android:id="@+id/lab2"
            style="@style/btnStyle"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignEnd="@+id/scroll"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/custom_button"
            android:text="L2"
            android:textSize="12dp" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>